--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="container"></div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./src/index.js"></script>
   </body>
 </html>
